--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Image Upload</title>
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <h1>Image Upload</h1>
